--- a/PostSafety/PostSafety/Base.lproj/LaunchScreen.storyboard
+++ b/PostSafety/PostSafety/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,21 +20,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="3Z0-i7-foO">
-                                <rect key="frame" x="68" y="214" width="240" height="240"/>
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="480x480.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="3Z0-i7-foO">
+                                <rect key="frame" x="63" y="209" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="3Z0-i7-foO" secondAttribute="height" multiplier="1:1" id="uG1-Jm-U4c"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Post Safety" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhI-mk-jUv">
-                                <rect key="frame" x="60.5" y="170.5" width="255.5" height="27.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
-                                <color key="textColor" red="1" green="0.29411764709999999" blue="0.0039215686269999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="nhI-mk-jUv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1wX-D2-i2V"/>
-                            <constraint firstItem="3Z0-i7-foO" firstAttribute="top" secondItem="nhI-mk-jUv" secondAttribute="bottom" constant="16" id="Go5-s4-diU"/>
                             <constraint firstItem="3Z0-i7-foO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Qwe-da-sUi"/>
+                            <constraint firstItem="3Z0-i7-foO" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="2/3" id="Xzk-VF-4Y1"/>
                             <constraint firstItem="3Z0-i7-foO" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="roX-gJ-IgO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -44,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch" width="240" height="240"/>
+        <image name="480x480.jpg" width="480" height="480"/>
     </resources>
 </document>
